2006-07-12  Francis Kung  <fkung@redhat.com>

	* gnu/java/awt/peer/gtk/CairoGraphics2D.java: Organized imports.
	(cairoArc): New native method.
	(cairoRestore): New native method.
	(cairoSave): New native method.
	(cairoScale): New native method.
	(createPath): New method to centralize code from draw and fill.
	(draw): Modified to use createPath method.
	(fill): Modified to use createPath method.
	* include/gnu_java_awt_peer_gtk_CairoGraphics2D.h: Added 
	function declarations.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_CairoGraphics2D.c
	(Java_gnu_java_awt_peer_gtk_CairoGraphics2D_cairoScale): New 
	method.
	(Java_gnu_java_awt_peer_gtk_CairoGraphics2D_cairoSave): New 
	method.
	(Java_gnu_java_awt_peer_gtk_CairoGraphics2D_cairoArc): New 
	method.
	
2006-07-12  Tom Tromey  <tromey@redhat.com>

	PR libgcj/27271:
	* java/util/zip/ZipFile.java (getInputStream): Call addDummyByte
	on PartialInputStream.
	(PartialInputStream.dummyByteCount): New field.
	(PartialInputStream.fillBuffer): Handle dummy byte.
	(PartialInputStream.read): Likewise.
	(PartialInputStream.addDummyByte): New method.

2006-07-12  Mario Torre  <neugens@limasoftware.net>

	* native/jni/gconf-peer/GConfNativePeer.c
	(Java_gnu_java_util_prefs_gconf_GConfNativePeer_gconf_1client_1get_1string):
	Fixed C++ style comment.

2006-07-12  David Gilbert  <david.gilbert@object-refinery.com>

	* java/util/Arrays.java
	(asList): Updated API docs.

2006-07-11  Robert Schuster  <robertschuster@fsfe.org>

	Fixes PR28350.
	* native/jni/gconf-peer/GConfNativePeer.c:
	(Java_gnu_java_util_prefs_gconf_GConfNativePeer_gconf_1client_1set_1string):
	Changed if-expression.
	(Java_gnu_java_util_prefs_gconf_GConfNativePeer_gconf_1client_1get_1string):
	Added check for _value not being NULL.
	
2006-07-11  Roman Kennke  <kennke@aicas.com>

	* native/jni/java-net/gnu_java_net_local_LocalSocketImpl.c
	(read): Use fd when local sockets are disabled to make the
	compiler quite.
	(write): Likewise.
