@@ -43,6 +43,8 @@ import java.awt.GraphicsEnvironment;
 import java.awt.HeadlessException;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.awt.event.WindowEvent;
+import java.awt.event.WindowAdapter;
 import java.beans.PropertyChangeEvent;
 import java.io.File;
 import java.util.ArrayList;
@@ -744,10 +746,16 @@ public class JFileChooser extends JComponent implements Accessible
     JDialog dialog = new JDialog(toUse);
     setSelectedFile(null);
     dialog.getContentPane().add(this);
+    dialog.addWindowListener( new WindowAdapter()
+      {
+	public void windowClosing(WindowEvent e)
+	{
+	  cancelSelection();
+	}
+      });
     dialog.setModal(true);
     dialog.invalidate();
     dialog.repaint();
-
     return dialog;
   }
 
